[gd_scene load_steps=3 format=2]

[ext_resource path="res://General/TotalGUI.gd" type="Script" id=1]
[ext_resource path="res://General/OnePlayerGUI.tscn" type="PackedScene" id=2]

[node name="TotalGUI" type="MarginContainer"]
margin_top = 450.0
margin_right = 960.0
margin_bottom = 520.0
script = ExtResource( 1 )

[node name="AddGUI" type="HBoxContainer" parent="."]
margin_right = 960.0
margin_bottom = 70.0

[node name="PlayerOneGUI" parent="AddGUI" instance=ExtResource( 2 )]
margin_right = 12.0
margin_bottom = 70.0

[node name="PlayerTwoGUI" parent="AddGUI" instance=ExtResource( 2 )]
margin_left = 16.0
margin_right = 28.0
margin_bottom = 70.0
